--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "ioredis": "^5.9.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "tsx": "^4.21.0",
     "zod": "^4.3.5"
   },
