--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/server": "^11.8.1",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.26.2",
     "ioredis": "^5.9.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
