--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/react-query": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.5",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
+    "nodemailer": "^7.0.12",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
