--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "stripe": "^20.2.0",
     "tsx": "^4.21.0",
     "zod": "^4.3.5"
   },
