--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.5",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "ioredis": "^5.9.2",
